apps/heathview-cardiomegaly-cnn/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardiomegaly-frontend-service
  namespace: healthview-cardiomegaly-cnn
spec:
  selector:
    app: cardiomegaly-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
